fixed nav-bar size issue on smaller screens

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -1,11 +1,3 @@
-/* h1 a { *
-/*     color: #FCA205; */
-/* } */
-
-/* .navbar-brand { */
-/*     font-size: 30px; */
-/* } */
-
 .page-header h1 a {
     color: black;
 }
@@ -17,10 +9,8 @@
 .panel-body img {
     float: left;
     margin-right: 15px;
-    /* margin-bottom: 5px; */
 }
 
-
-body { 
-    padding-top: 65px; 
+body {
+  padding-top: 70px;
 }
